add command mode